<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="32dp"
            android:descendantFocusability="blocksDescendants">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/back_to_pokemons_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:paddingTop="12dp"
                android:paddingEnd="6dp"
                android:translationZ="100dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/header"
                app:srcCompat="@drawable/ic_arrow" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/back_to_pokemons"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:translationZ="100dp"
                app:layout_constraintStart_toEndOf="@id/back_to_pokemons_icon"
                app:layout_constraintTop_toTopOf="@id/back_to_pokemons_icon" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/progress_index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_marginStart="12dp"
                android:text=""
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:translationZ="100dp"
                app:layout_constraintEnd_toEndOf="@id/header"
                app:layout_constraintTop_toTopOf="@id/header"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pokemonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="36dp"
                android:text=""
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold"
                android:translationZ="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:background="@color/colorPrimary"
                android:elevation="9dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CardView" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/pokemonImage"
                android:layout_width="190dp"
                android:layout_height="190dp"
                android:layout_marginBottom="20dp"
                android:scaleType="fitCenter"
                android:translationZ="100dp"
                app:layout_constraintBottom_toBottomOf="@id/header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <com.skydoves.androidribbon.RibbonRecyclerView
                android:id="@+id/ribbonRecyclerView"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pokemonName"
                app:ribbon_recycler_orientation="horizontal" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pokemonWeight"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text=""
                android:textSize="21sp"
                app:layout_constraintEnd_toStartOf="@id/pokemonHeight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ribbonRecyclerView"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pokemonHeight"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="21sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/pokemonWeight"
                app:layout_constraintTop_toTopOf="@id/pokemonWeight"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/weight_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textColor="@color/white_56"
                app:layout_constraintEnd_toStartOf="@id/pokemonHeight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pokemonWeight"
                tools:text="Weight" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/height_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textColor="@color/white_56"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/pokemonWeight"
                app:layout_constraintTop_toBottomOf="@id/pokemonHeight" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/stats_title"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/base_stats"
                android:textColor="@color/white_93"
                android:textSize="21sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/weight_title" />

            <TextView
                android:id="@+id/hp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:text="@string/hp"
                android:textColor="@color/white_70"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/stats_title" />

            <com.skydoves.progressview.ProgressView
                android:id="@+id/pokemon_progress_hp"
                android:layout_width="0dp"
                android:layout_height="18dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintBottom_toBottomOf="@id/hp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/hp"
                app:layout_constraintTop_toTopOf="@id/hp"
                app:progressView_colorBackground="@color/white"
                app:progressView_colorProgress="@color/colorPrimary"
                app:progressView_labelColorInner="@color/white"
                app:progressView_labelColorOuter="@color/black"
                app:progressView_labelSize="12sp"
                app:progressView_labelText="hp"
                app:progressView_max="100"
                app:progressView_progress="0"
                app:progressView_radius="12dp" />

            <TextView
                android:id="@+id/attack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:text="@string/atk"
                android:textColor="@color/white_70"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/hp" />

            <com.skydoves.progressview.ProgressView
                android:id="@+id/pokemon_progress_atk"
                android:layout_width="0dp"
                android:layout_height="18dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintBottom_toBottomOf="@id/attack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/pokemon_progress_hp"
                app:layout_constraintTop_toTopOf="@id/attack"
                app:progressView_colorBackground="@color/white"
                app:progressView_colorProgress="@color/md_orange_100"
                app:progressView_labelColorInner="@color/white"
                app:progressView_labelColorOuter="@color/black"
                app:progressView_labelSize="12sp"
                app:progressView_labelText="Attack"
                app:progressView_max="100"
                app:progressView_progress="0"
                app:progressView_radius="12dp" />

            <TextView
                android:id="@+id/defense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:text="@string/def"
                android:textColor="@color/white_70"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/attack" />

            <com.skydoves.progressview.ProgressView
                android:id="@+id/pokemon_progress_def"
                android:layout_width="0dp"
                android:layout_height="18dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintBottom_toBottomOf="@id/defense"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/pokemon_progress_hp"
                app:layout_constraintTop_toTopOf="@id/defense"
                app:progressView_colorBackground="@color/white"
                app:progressView_colorProgress="@color/md_blue_200"
                app:progressView_labelColorInner="@color/white"
                app:progressView_labelColorOuter="@color/black"
                app:progressView_labelSize="12sp"
                app:progressView_labelText="Defense"
                app:progressView_max="100"
                app:progressView_progress="0"
                app:progressView_radius="12dp" />

            <TextView
                android:id="@+id/speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:text="@string/spd"
                android:textColor="@color/white_70"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/defense" />

            <com.skydoves.progressview.ProgressView
                android:id="@+id/pokemon_progress_spd"
                android:layout_width="0dp"
                android:layout_height="18dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintBottom_toBottomOf="@id/speed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/pokemon_progress_hp"
                app:layout_constraintTop_toTopOf="@id/speed"
                app:progressView_colorBackground="@color/white"
                app:progressView_colorProgress="@color/flying"
                app:progressView_labelColorInner="@color/white"
                app:progressView_labelColorOuter="@color/black"
                app:progressView_labelSize="12sp"
                app:progressView_labelText="Speed"
                app:progressView_max="100"
                app:progressView_progress="0"
                app:progressView_radius="12dp" />

            <TextView
                android:id="@+id/exp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:text="@string/exp"
                android:textColor="@color/white_70"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/speed" />

            <com.skydoves.progressview.ProgressView
                android:id="@+id/pokemon_progress_exp"
                android:layout_width="0dp"
                android:layout_height="18dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintBottom_toBottomOf="@id/exp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/pokemon_progress_hp"
                app:layout_constraintTop_toTopOf="@id/exp"
                app:progressView_colorBackground="@color/white"
                app:progressView_colorProgress="@color/md_green_200"
                app:progressView_labelColorInner="@color/white"
                app:progressView_labelColorOuter="@color/black"
                app:progressView_labelSize="12sp"
                app:progressView_labelText="Exp"
                app:progressView_max="100"
                app:progressView_progress="0"
                app:progressView_radius="12dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>